# flatland_double_ackermann_plugin

./: README.md
double_ackermann_flatland/: .gitignore  CMakeLists.txt  package.xml
double_ackermann_flatland/launch/: ackermann_in_flatland.launch  double_ackermann_in_flatland.launch
double_ackermann_flatland/maps/: hospital_section.world.yaml  hospital_section.yaml
double_ackermann_flatland/robot/: ackermann.model.yaml  double_ackermann.model.yaml
double_ackermann_flatland/rviz/: robot_navigation.rviz
flatland/flatland_plugins/: CMakeLists.txt  flatland_plugins.xml
flatland/flatland_plugins/include/flatland_plugins/: ackermann_drive.h  dackermann_drive.h  diff_drive.h
flatland/flatland_plugins/src/: ackermann_drive.cpp  dackermann_drive.cpp
